--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "start": "start-storybook -p 6006",
+        "build": "build-storybook",
+        "prestart": "build-storybook"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.18.5",
+        "@storybook/addon-a11y": "^6.5.9",
         "@storybook/addon-actions": "^6.5.9",
         "@storybook/addon-essentials": "^6.5.9",
         "@storybook/addon-interactions": "^6.5.9",
