--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "start-storybook -p 6006",
-        "build": "build-storybook",
-        "prestart": "build-storybook"
+        "build": "build-storybook"
     },
     "keywords": [],
     "author": "",
@@ -24,6 +23,7 @@
         "@storybook/testing-library": "0.0.13",
         "@types/react": "^18.0.14",
         "babel-loader": "^8.2.5",
+        "bootstrap-icons": "^1.8.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "typescript": "^4.7.4"
